--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,10 +1,10 @@
 <html>
     <head>
         <title>
-            Dashboard
+            COVID0 Home Page
         </title>
     </head>
     <body>
-        <h1>Welcome home</h1>
+        <h1>Welcome home, you have logged in</h1>
     </body>
 </html>
