enable routes with login requirement

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -57,7 +57,7 @@
                 </button>
 
                 <br><br><br>
-                <p style="text-align: center">Sign up for a <a href="./businessAcc.html">Business account</a>.</p>
+                <p style="text-align: center">Sign up for a <a href="{{ url_for('business_login') }}">Business account</a>.</p>
             </div>
         </div>
     </div>
