login manager ensures session login, needs a logout button

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -41,7 +41,7 @@
                 </button>
 
                 <br><br><br>
-                <p style="text-align: center">New here? <a href="{{ url_for('signup_user') }}">Sign up</a>!</p>
+                <p style="text-align: center">New here? <a href="{{ url_for('signup_for_user') }}">Sign up</a>!</p>
             </div>
         </div>
     </div>
