--- a/app/templates/business_register.html
+++ b/app/templates/business_register.html
@@ -19,23 +19,23 @@
             <div class="col-12 signUpCol">
                 <h2 style="text-align: center">Business Account</h2>
                 <br><br>
-                <form>
+                <form method="POST">
                     <div class="row">
                         <div class="col-6">
-                            <input type="text" class="form-control" id="business_name" placeholder="Business name">
+                            <input type="text" class="form-control" name="name" placeholder="Business name">
                         </div>
                         <div class="col-6">
-                            <input type="text" class="form-control" id="business_loc" placeholder="Location">
+                            <input type="text" class="form-control" name="location" placeholder="Location">
                         </div>
                     </div>
                     <br>
-                    <input type="email" class="form-control" id="business_email" placeholder="Email address">
+                    <input type="email" class="form-control" name="email" placeholder="Email address">
                     <br>
-                    <input type="text" class="form-control" id="business_username" placeholder="Account username">
+                    <input type="text" class="form-control" name="username" placeholder="Account username">
                     <br>
                     <div class="row">
                         <div class="col-6">
-                            <input type="password" class="form-control" id="business_pwd" placeholder="Password">
+                            <input type="password" class="form-control" name="password" placeholder="Password">
                         </div>
                         <div class="col-6">
                             <input type="password" class="form-control" id="business_repwd" placeholder="Confirm password">
@@ -43,7 +43,7 @@
                     </div>
                     <br>
                     <div style="text-align: center; margin-bottom: 25px;">
-                        <button class="button" type="button">Submit</button>
+                        <button class="button" type="submit">Submit</button>
                     </div>
                 </form>
 
