--- a/app/templates/business_register.html
+++ b/app/templates/business_register.html
@@ -57,6 +57,8 @@
                     </span>
                     Continue using Google
                 </button>
+                <br><br>
+                <p style="text-align: center">Already registered? <a href="{{ url_for('business_login') }}">Login here</a>.</p>
             </div>
         </div>
     </div>
