--- a/app/templates/cardindex_temp.html
+++ b/app/templates/cardindex_temp.html
@@ -59,17 +59,11 @@
                     </div>
                 </div>
             </div>
-            {% if index == index1 %}
+            
+            {% if index % 3 == 0 %}
             </div>
-                {% set index1 = index1  + 3 %}
             {% endif %}
-            {% set index = index  + 1 %}
-
         {% endfor %}
-        {% if index % 3 == 1 or index % 3 == 2 %}
-            </div>
-        {% endif %}
-        
     </div>
 </body>
 <html>
