Fix responsiveness issue

--- a/app/templates/cardindex_temp.html
+++ b/app/templates/cardindex_temp.html
@@ -27,7 +27,7 @@
                 <div class="row card-index">
             {% endif %}
 
-                    <div class="col-sm">
+                    <div class="col col-sm-4">
                         <div class="card shop-card">
                             <a href="{{ url_for('home_business', public_id=j) }}"><img src="https://picsum.photos/400/200/?random={{ loop.index }}" class="card-img-top"/></a>
                             <div class="card-body">
