--- a/BlockchainView/blockchainview.css
+++ b/BlockchainView/blockchainview.css
@@ -1,13 +1,9 @@
-body {
-    background: white;
-}
 
 .blockchain-view {
-    margin-top: 0px;
+    margin-top: 80px;
 }
 
 .product-form {
-    margin-top: 80px;
     background: white;
     border-radius: 10px;
     opacity: 0.8;
@@ -17,3 +13,38 @@ body {
     -moz-box-shadow: 0 5px 6px -6px #777;
     box-shadow: 0 5px 20px -10px #777;
 }
+
+.blockchain-node {
+    background: white;
+    border-radius: 10px;
+    border: none;
+    
+    -webkit-box-shadow: 0 5px 6px -6px #777;
+    -moz-box-shadow: 0 5px 6px -6px #777;
+    box-shadow: 0 5px 20px -10px #777;
+}
+
+img.desaturate {
+	filter: grayscale(100%);
+}
+
+/* Timeline holder */
+ul.timeline {
+    list-style-type: none;
+    position: relative;
+    padding-left: 0;
+}
+
+ /* Timeline vertical line */   
+ul.timeline:before {
+    content: ' ';
+    background: #ccc;
+    display: inline-block;
+    position: absolute;
+    left: 50%;
+    width: 4px;
+    height: 100%;
+    z-index: -1;
+    border-radius: 1rem;
+}
+
